<resources>
    <string name="app_name">GitRepos</string>
  <string name="repo_title">title</string>
    <string name="repo_language">language:  %1$s</string>
    <string name="repositories">GitHub Repositories</string>
    <string name="repository_details">Repository details</string>
    <string name="repo_owner">owner:  %1$s</string>
    <string name="repo_link">link: </string>
    <string name="repo_commits">commits:</string>

    <string name="no_available_commits">"No internet connection. Cannot load repository details"</string>
    <string name="no_available_repositories">No available repositories</string>

    <string name="no_available_network">No internet connection</string>
</resources>